[package]
name = "destiny-unpacker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libm = "0.2.2" # floor for block count
libloading = "0.7" # oodle decompression
openssl = "0.10.40" # AES-128-GCM decryption
getopts = "0.2" # CLI arg parsing


[profile.dev]
opt-level = 1

[profile.release]
panic = "abort"
strip = true