[package]
name = "d2_package_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2" # floor for block count
libloading = "0.7" # oodle decompression
openssl = "0.10" # AES-128-GCM decryption
tracing = "0.1" # error tracing